--- a/style.css
+++ b/style.css
@@ -2,10 +2,13 @@
   margin: 0;
   padding: 0;
   box-sizing: 0;
+  font-family: "Courier New";
+
 }
 .page {
   display: flex;
   flex-wrap: wrap;
+  background-color: lavender;
 }
 .section {
   display: flex;
@@ -22,15 +25,15 @@
 }
 .header {
   height: 50px;
-  background-color: snow;
+  background-color: cornflowerblue;
 }
 .header-item {
   height: 50px;
   width: 20%;
 }
 .mid {
-  border-left: 1px solid white;
-  border-right: 1px solid white;
+  /*border-left: 1px solid white;
+  border-right: 1px solid white;*/
 }
 .main-img {
   width: 30%;
@@ -44,7 +47,36 @@
 }
 h1 {
   font-size: 60px;
-  font-style: italic;
+  font-weight: normal;
+}
+p {
+  font-family: "Courier New";
+  padding-left: 10px;
+  font-size: 12px;
+}
+.subtitle {
+  height: 50px;
+  background-color: khaki;
+  justify-content: left;
+  padding-left: 10px;
+}
+h2 {
+  font-size: 30px;
+  font-weight: normal;
+
+}
+.body1 {
+  width: 33%;
+  background-color: ivory;
+  justify-content: left;
+}
+.body2 {
+  width: 33%;
+  background-color: ivory;
+  justify-content: left;
+}
+.body3 {
+  background-color: ivory;
 }
 .subsection {
   height: 80px;
@@ -55,4 +87,21 @@ h1 {
 .subsection-footer {
   height: 100px;
   background-color: snow;
+}
+.footer {
+  margin-top: 30px;
+  height: 100px;
+  background-color: lightgreen;
+}
+.link-item:hover,
+.link-item:visited:hover {
+  background-color: coral;
+}
+.link-item {
+  text-decoration: none;
+}
+.quote {
+  margin: 20px 10px 0px 10px;
+  background-color: snow;
+  /*margin-bottom: 10px;*/
 }
